--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,13 @@ find_package(Boost REQUIRED COMPONENTS system)
 add_definitions(-D_WIN32_WINNT=0x0A00)
 
 
-add_executable(client client.cpp)
-add_executable(server server.cpp)
+add_executable(client src/client.cpp)
+add_executable(server src/server.cpp src/connection.cpp)
 
 target_include_directories(client PRIVATE ${Boost_INCLUDE_DIRS})
 target_include_directories(server PRIVATE ${Boost_INCLUDE_DIRS})
+target_include_directories(client PRIVATE ./include)
+target_include_directories(server PRIVATE ./include)
 
 
 target_link_libraries(client PRIVATE 
